<resources>
    <string name="app_name">Linear Layout Challenge</string>
    <string name="person_name">Mohamed Shaban</string>
    <string name="_3_hr">3 hr</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="egyptian">Egyptian</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="uk">UK</string>
    <string name="_150_reviews">(150 Reviews)</string>
    <string name="_4_5">4.5</string>
</resources>